[gd_scene load_steps=10 format=3 uid="uid://dflsxker1ppx5"]

[ext_resource type="Script" uid="uid://3s3fssnkts4e" path="res://scripts/StageSelect.gd" id="1_tne6o"]
[ext_resource type="PackedScene" uid="uid://d2lkfnq3ewo5a" path="res://scenes/RadarChart.tscn" id="3_eeirb"]
[ext_resource type="AudioStream" uid="uid://t3cs5w73t4t4" path="res://assets/bgm/(StageSelect)maou_bgm_acoustic36.mp3" id="4_1tbhu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38erg"]
bg_color = Color(0.20871, 0.20871, 0.20871, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eeirb"]
bg_color = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1tbhu"]
bg_color = Color(0.251042, 0.725299, 0.276599, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_svcss"]
bg_color = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndrh2"]
bg_color = Color(0.827451, 0.54901963, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3u3u5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Stage Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tne6o")

[node name="M1" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -214.0
offset_right = -436.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "M-1"

[node name="M2" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = -214.0
offset_right = -296.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "M-2"

[node name="M3" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -214.0
offset_right = -156.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "M-3"

[node name="A1" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -114.0
offset_right = -436.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "A-1"

[node name="A2" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = -114.0
offset_right = -296.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "A-2"

[node name="A3" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -114.0
offset_right = -156.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "A-3"

[node name="F1" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -14.0
offset_right = -436.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "F-1"

[node name="F2" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = -14.0
offset_right = -296.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "F-2"

[node name="F3" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -14.0
offset_right = -156.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "F-3"

[node name="F4" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -13.0
offset_right = -21.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "F-4"

[node name="F5" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -10.0
offset_right = 105.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "F-5"

[node name="C1" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = 86.0
offset_right = -436.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "C-1"

[node name="C2" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = 86.0
offset_right = -296.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "C-2"

[node name="C3" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = 86.0
offset_right = -156.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "C-3"

[node name="R1" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = 186.0
offset_right = -436.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "R-1"

[node name="R2" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = 186.0
offset_right = -296.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "R-2"

[node name="R3" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = 186.0
offset_right = -156.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "R-3"

[node name="TittleScreenButton" type="Button" parent="." groups=["menu_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 289.0
offset_top = 216.0
offset_right = 521.0
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_38erg")
text = "Voltar para o Menu Inicial"

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 85.0
offset_top = 37.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 25
text = "Menu de Fases"

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1tbhu")
volume_db = -3.0
autoplay = true
bus = &"Music"

[node name="RadarChart" parent="." instance=ExtResource("3_eeirb")]
position = Vector2(975, 179)

[node name="CharacterStats" type="Control" parent="."]
anchors_preset = 0
offset_left = 600.0
offset_top = 67.0
offset_right = 801.0
offset_bottom = 280.0

[node name="LifeBar" type="ProgressBar" parent="CharacterStats"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -71.5
offset_right = 75.0
offset_bottom = -46.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_eeirb")
theme_override_styles/fill = SubResource("StyleBoxFlat_1tbhu")
step = 1.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="CharacterStats/LifeBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -2.5
offset_right = 69.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.25098, 0.72549, 0.278431, 1)
theme_override_colors/font_outline_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 22
text = "100/100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="CharacterStats/LifeBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -32.5
offset_right = -40.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.25098, 0.72549, 0.278431, 1)
theme_override_colors/font_outline_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 22
text = "HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeBar" type="ProgressBar" parent="CharacterStats"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -2.5
offset_right = 75.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_svcss")
theme_override_styles/fill = SubResource("StyleBoxFlat_ndrh2")
value = 100.0
show_percentage = false

[node name="LabelTimer" type="Label" parent="CharacterStats/TimeBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -32.5
offset_right = 3.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.827, 0.548, 0, 1)
theme_override_colors/font_outline_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 22
text = "Tempo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="CharacterStats/TimeBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -2.5
offset_right = 69.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.827451, 0.54901963, 0, 1)
theme_override_colors/font_outline_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 22
text = "00.0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PanelExp" type="Panel" parent="CharacterStats"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 58.5
offset_right = 75.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3u3u5")

[node name="LabelExp" type="Label" parent="CharacterStats/PanelExp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -15.5
offset_right = -30.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.36067188, 0.6448221, 0.85031146, 1)
theme_override_colors/font_outline_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 22
text = "EXP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelExpValue" type="Label" parent="CharacterStats/PanelExp"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -15.5
offset_right = -7.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.36067188, 0.6448221, 0.85031146, 1)
theme_override_colors/font_outline_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 22
text = "10000"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="M1" to="." method="_on_m_1_pressed"]
[connection signal="pressed" from="M2" to="." method="_on_m_2_pressed"]
[connection signal="pressed" from="M3" to="." method="_on_m_3_pressed"]
[connection signal="pressed" from="A1" to="." method="_on_a_1_pressed"]
[connection signal="pressed" from="A2" to="." method="_on_a_2_pressed"]
[connection signal="pressed" from="A3" to="." method="_on_a_3_pressed"]
[connection signal="pressed" from="F1" to="." method="_on_f_1_pressed"]
[connection signal="pressed" from="F2" to="." method="_on_f_2_pressed"]
[connection signal="pressed" from="F3" to="." method="_on_f_3_pressed"]
[connection signal="pressed" from="F4" to="." method="_on_f_4_pressed"]
[connection signal="pressed" from="F5" to="." method="_on_f_5_pressed"]
[connection signal="pressed" from="C1" to="." method="_on_c_1_pressed"]
[connection signal="pressed" from="C2" to="." method="_on_c_2_pressed"]
[connection signal="pressed" from="C3" to="." method="_on_c_3_pressed"]
[connection signal="pressed" from="R1" to="." method="_on_r_1_pressed"]
[connection signal="pressed" from="TittleScreenButton" to="." method="_on_tittle_screen_button_pressed"]
